--- a/com.kubelt.lib.http.browser.html
+++ b/com.kubelt.lib.http.browser.html
@@ -34,20 +34,12 @@
 					<pre class="brush: clojure">(ns com.kubelt.lib.http.browser
   {:copyright &quot;©2022 Kubelt, Inc.&quot; :license &quot;Apache 2.0&quot;}
   (:require
-   [goog.Uri.QueryData :as query]
    [goog.net.XhrIo :as xhrio]
-   [goog.structs :as structs])
-  (:require-macros
-   [cljs.core.async.macros :refer [go]])
+   [goog.url :as gurl])
   (:require
-   [cljs.core.async :as async :refer [&lt;!]]
-   [clojure.string :as str])
-  (:require
-   [malli.core :as malli]
-   [malli.error :as me])
+   [malli.core :as malli])
   (:require
    [com.kubelt.lib.error :as lib.error]
-   [com.kubelt.lib.http.media-type :as http.media-type]
    [com.kubelt.lib.http.shared :as http.shared]
    [com.kubelt.lib.json :as lib.json]
    [com.kubelt.proto.http :as proto.http]
@@ -56,40 +48,10 @@
 			</tr>
 			<tr>
 				<td class="docs">
-					
+					<h2>Internal</h2>
 				</td>
 				<td class="codes">
-					<pre class="brush: clojure">(defrecord HttpClient []
-  proto.http/HttpClient
-  (request!
-    [this m]
-    (proto.http/request-cb this m #(fn [rtext] rtext)))
-  (request-cb
-    [this m cb]
-    (if-not (malli/validate spec.http/request m)
-      ;; The request map is invalid, return a map describing the error.
-      (lib.error/explain spec.http/request m)
-      ;; We have a valid request map, construct a URL from it before
-      ;; making a request.
-      (let [
-            ;; build url
-            method (http.shared/request-&gt;method m)
-            ;; TODO check method and send post or get
-            scheme (http.shared/request-&gt;scheme m)
-            domain (http.shared/request-&gt;domain m)
-            port (http.shared/request-&gt;port m)
-            path (http.shared/request-&gt;path m)
-            headers (http.shared/request-&gt;headers m)
-            body (http.shared/request-&gt;body m)
-            url (str/join  [scheme &quot;://&quot; domain &quot;:&quot; port path ])]
-        ;; The request map is valid, so fire off the request.
-        (xhrio/send
-         url
-         (fn [^js event]                                            
-           (let [res (-&gt; event .-target .getResponseText)]          
-             (cb res)))                                            
-         method
-         body)))))</pre>
+					<pre class="brush: clojure"></pre>
 				</td>
 			</tr>
 			<tr>
@@ -112,8 +74,67 @@
    :uri/fragment fragment
    :uri/query query
    :uri/domain domain
-   :uri/user user}
-  )</pre>
+   :uri/user user})</pre>
+				</td>
+			</tr>
+			<tr>
+				<td class="docs">
+					<p>Returns a response handler function for an HTTP request send using XhrIo.</p>
+				</td>
+				<td class="codes">
+					<pre class="brush: clojure">(defn- make-response-fn
+  [cb]
+  {:pre [(fn? cb)]}
+  (fn [^js event]
+    (let [res (-&gt; event .-target .getResponseText)]
+      ;; TODO Return a structured map containing the response data. The
+      ;; structure needs to be schematized as a spec, e.g.
+      ;; {:body {:text ...}}
+      (cb res))))</pre>
+				</td>
+			</tr>
+			<tr>
+				<td class="docs">
+					<h2>Public</h2>
+				</td>
+				<td class="codes">
+					<pre class="brush: clojure"></pre>
+				</td>
+			</tr>
+			<tr>
+				<td class="docs">
+					
+				</td>
+				<td class="codes">
+					<pre class="brush: clojure">(defrecord HttpClient []
+  proto.http/HttpClient
+  (request!
+    [this m]
+    (proto.http/request-cb this m #(fn [rtext] rtext)))
+  (request-cb
+    [this m cb]
+    (if-not (malli/validate spec.http/request m)
+      ;; The request map is invalid, return a map describing the error.
+      (lib.error/explain spec.http/request m)
+      ;; We have a valid request map, construct a URL from it before
+      ;; making a request.
+      (let [url-or-error (http.shared/request-&gt;url m)]
+        (if (lib.error/error? url-or-error)
+          ;; Constructed URL wasn't valid, return an error map.
+          url-or-error
+          ;; Perform the HTTP request.
+          (let [method (http.shared/request-&gt;method m)
+                body (http.shared/request-&gt;body m)
+                headers (http.shared/request-&gt;headers m)
+                headers-obj (clj-&gt;js headers)
+                ;; 0 means no timeout.
+                timeout-ms 0
+                on-response (make-response-fn cb)]
+            (xhrio/send url-or-error
+                        on-response
+                        method body
+                        headers-obj
+                        timeout-ms)))))))</pre>
 				</td>
 			</tr>
 			<tr>
