--- a/com.kubelt.ddt.cmds.sdk.core.register.html
+++ b/com.kubelt.ddt.cmds.sdk.core.register.html
@@ -44,8 +44,8 @@
 				</td>
 				<td class="codes">
 					<pre class="brush: clojure">(defonce command
-  {:command &quot;init&quot;
-   :desc &quot;Initialize the SDK&quot;
+  {:command &quot;register&quot;
+   :desc &quot;Register with a core&quot;
    :requiresArg false
    :builder (fn [^Yargs yargs]
               yargs)
