--- a/com.kubelt.ddt.cmds.p2p.authenticate.html
+++ b/com.kubelt.ddt.cmds.p2p.authenticate.html
@@ -62,8 +62,8 @@
                     ;; wallet address starting with &quot;0x&quot; as a big
                     ;; integer.
                     core-config #js {:describe &quot;a @core name&quot;
-                                     :string true}]
-                (.options yargs &quot;core&quot; core-config)
+                                     :type &quot;string&quot;}]
+                (.positional yargs &quot;core&quot; core-config)
                 (ddt.options/options yargs)))
    :handler (fn [args]
               (let [args-map (js-&gt;clj args :keywordize-keys true)
