--- a/com.kubelt.ddt.cmds.sdk.core.authenticate.html
+++ b/com.kubelt.ddt.cmds.sdk.core.authenticate.html
@@ -81,13 +81,15 @@
                                           :p2p/read maddr
                                           :p2p.read/scheme scheme
                                           :p2p/write maddr
-                                          :p2p.write/scheme scheme})
-                           result (&lt;! (sdk.core/authenticate! kbt core))]
-                       (if (lib.error/error? result)
-                         (prn (:error kbt))
-                         ;; TODO encrypt(?) and store returned JWT
-                         (prn result))
-                       (sdk/halt! kbt)))))))})</pre>
+                                          :p2p.write/scheme scheme})]
+                       (-&gt; (sdk.core/authenticate! kbt core)
+                           (.then (fn [result]
+                                    (if (lib.error/error? result)
+                                      (prn (:error kbt))
+                                      ;; TODO encrypt(?) and store returned JWT
+                                      (prn result))))
+                           (.then (fn []
+                                    (sdk/halt! kbt))))))))))})</pre>
 				</td>
 			</tr>
 			<tr>
