--- a/com.kubelt.lib.p2p.html
+++ b/com.kubelt.lib.p2p.html
@@ -33,14 +33,8 @@
 				<td class="codes">
 					<pre class="brush: clojure">(ns com.kubelt.lib.p2p
   {:copyright &quot;©2022 Kubelt, Inc.&quot; :license &quot;Apache 2.0&quot;}
-  (:require-macros
-   [cljs.core.async.interop :refer [&lt;p!]]
-   [cljs.core.async.macros :refer [go]])
   (:require
-   [cljs.core.async :refer [&lt;!]]
    [clojure.string :as cstr])
-  (:require
-   [cognitect.transit :as transit])
   (:require
    [com.kubelt.lib.json :as lib.json]
    [com.kubelt.lib.jwt :as jwt]
@@ -70,7 +64,7 @@
         host (get-in sys [:client/p2p :p2p/write :address/host])
         port (get-in sys [:client/p2p :p2p/write :address/port])
         wallet (get sys :crypto/wallet)
-        address (get wallet :wallet/address)
+        address (cstr/lower-case (get wallet :wallet/address))
         body {:address address}
         body-str (lib.json/edn-&gt;json-str body)
         path (cstr/join &quot;&quot; [&quot;/@&quot; core &quot;/auth&quot;])
@@ -85,6 +79,8 @@
     ;; wallet address. Expect a nonce in return, which should be signed
     ;; and returned to prove ownership of provided key and complete
     ;; registration.
+    ;;
+    ;; Returns a promise.
     (http/request! client request)))</pre>
 				</td>
 			</tr>
@@ -110,80 +106,6 @@
                  :uri/domain host
                  :uri/port port
                  :uri/path path}]
-    (http/request! client request)))</pre>
-				</td>
-			</tr>
-			<tr>
-				<td class="docs">
-					<p>Store a key/value pair for the given user account. Returns a core.async channel.</p>
-				</td>
-				<td class="codes">
-					<pre class="brush: clojure">(defn store!
-  [sys core key value]
-  ;; TODO register public key with initial (register!)
-  ;; call?
-  (let [wallet (get sys :crypto/wallet)
-        client (get sys :client/http)
-        ;; If you need to know what platform you're running on, you
-        ;;can get the value of :sys/platform from the system map.
-        ;;platform (get sys :sys/platform)
-        scheme (get-in sys [:client/p2p :p2p/read :http/scheme])
-        host (get-in sys [:client/p2p :p2p/write :address/host])
-        port (get-in sys [:client/p2p :p2p/write :address/port])
-        path (cstr/join &quot;/&quot; [&quot;&quot; &quot;kbt&quot; key])
-        public-key (get wallet :account/public-key)
-        body {:kbt/name key
-              :kbt/value value
-              :key/public public-key}
-        ;; TODO sign request using user key pair
-        ;;body-str (&lt;p! (jwt/sign body))
-        transit-writer (transit/writer :json)
-        body-str (transit/write transit-writer body)
-        headers {&quot;Content-Type&quot; &quot;application/transit+json&quot;}
-        request {:com.kubelt/type :kubelt.type/http-request
-                 :http/method :post
-                 :http/headers headers
-                 :http/body body-str
-                 :uri/scheme scheme
-                 :uri/domain host
-                 :uri/port port
-                 :uri/path path}]
-    ;; (attach a signature to the request that p2p node can use to
-    ;; validate that the request came from the owner of the public key
-    ;; that was used to register; prefer an existing web request signing
-    ;; standard)
-    ;;
-    ;; Returns a core.async channel.
-    (http/request! client request)))</pre>
-				</td>
-			</tr>
-			<tr>
-				<td class="docs">
-					<p>Retrieve the value for a given key for a given user account. Returns a core.async channel.</p>
-				</td>
-				<td class="codes">
-					<pre class="brush: clojure">(defn query!
-  [sys core key]
-  {:pre [(string? core)]}
-  (let [wallet (get sys :crypto/wallet)
-        client (get sys :client/http)
-        scheme (get-in sys [:client/p2p :p2p/read :http/scheme])
-        host (get-in sys [:client/p2p :p2p/read :address/host])
-        port (get-in sys [:client/p2p :p2p/read :address/port])
-        public-key (get wallet :wallet/public-key)
-        path (cstr/join &quot;/&quot; [&quot;&quot; &quot;kbt&quot; public-key])
-        ;; TODO JWT sign request?
-        request {:com.kubelt/type :kubelt.type/http-request
-                 ;; TODO make this a default
-                 ;;:http/version &quot;1.1&quot;
-                 ;; TODO make this a default
-                 :http/method :get
-                 :uri/scheme scheme
-                 :uri/domain host
-                 :uri/port port
-                 :uri/path path}]
-    ;; TODO extract user's public key from the account map
-    ;; (for use as account identifier)
     (http/request! client request)))</pre>
 				</td>
 			</tr>
