--- a/com.kubelt.lib.http.browser.html
+++ b/com.kubelt.lib.http.browser.html
@@ -42,6 +42,7 @@
    [com.kubelt.lib.error :as lib.error]
    [com.kubelt.lib.http.shared :as http.shared]
    [com.kubelt.lib.json :as lib.json]
+   [com.kubelt.lib.promise :refer [promise]]
    [com.kubelt.proto.http :as proto.http]
    [com.kubelt.spec.http :as spec.http]))</pre>
 				</td>
@@ -83,14 +84,23 @@
 				</td>
 				<td class="codes">
 					<pre class="brush: clojure">(defn- make-response-fn
-  [cb]
-  {:pre [(fn? cb)]}
+  [resolve]
   (fn [^js event]
     (let [res (-&gt; event .-target .getResponseText)]
       ;; TODO Return a structured map containing the response data. The
       ;; structure needs to be schematized as a spec, e.g.
       ;; {:body {:text ...}}
-      (cb res))))</pre>
+      ;; FIXME support non-json and pass headers properly
+      (let [response {:http/status 200 :http/headers &quot;&quot;}]
+        (resolve (assoc response :http/body (lib.json/from-json res true)))))))</pre>
+				</td>
+			</tr>
+			<tr>
+				<td class="docs">
+					<p>(resolve (res)</p>
+				</td>
+				<td class="codes">
+					<pre class="brush: clojure"></pre>
 				</td>
 			</tr>
 			<tr>
@@ -110,31 +120,28 @@
   proto.http/HttpClient
   (request!
     [this m]
-    (proto.http/request-cb this m #(fn [rtext] rtext)))
-  (request-cb
-    [this m cb]
-    (if-not (malli/validate spec.http/request m)
-      ;; The request map is invalid, return a map describing the error.
-      (lib.error/explain spec.http/request m)
-      ;; We have a valid request map, construct a URL from it before
-      ;; making a request.
-      (let [url-or-error (http.shared/request-&gt;url m)]
-        (if (lib.error/error? url-or-error)
-          ;; Constructed URL wasn't valid, return an error map.
-          url-or-error
-          ;; Perform the HTTP request.
-          (let [method (http.shared/request-&gt;method m)
-                body (http.shared/request-&gt;body m)
-                headers (http.shared/request-&gt;headers m)
-                headers-obj (clj-&gt;js headers)
-                ;; 0 means no timeout.
-                timeout-ms 0
-                on-response (make-response-fn cb)]
-            (xhrio/send url-or-error
-                        on-response
-                        method body
-                        headers-obj
-                        timeout-ms)))))))</pre>
+    (promise
+     (fn [resolve reject]
+       (if-not (malli/validate spec.http/request m)
+         (reject (lib.error/explain spec.http/request m))
+         ;; The request map is valid, so fire off the request.
+         (let [url-or-error (http.shared/request-&gt;url m)]
+           (if (lib.error/error? url-or-error)
+             ;; Constructed URL wasn't valid, return an error map.
+             url-or-error
+             ;; Perform the HTTP request.
+             (let [method (http.shared/request-&gt;method m)
+                   body (http.shared/request-&gt;body m)
+                   headers (http.shared/request-&gt;headers m)
+                   headers-obj (clj-&gt;js headers)
+                   ;; 0 means no timeout.
+                   timeout-ms 0
+                   on-response (make-response-fn resolve)]
+               (xhrio/send url-or-error
+                           on-response
+                           method body
+                           headers-obj
+                           timeout-ms)))))))))  </pre>
 				</td>
 			</tr>
 			<tr>
