--- a/com.kubelt.lib.p2p.html
+++ b/com.kubelt.lib.p2p.html
@@ -64,7 +64,7 @@
         host (get-in sys [:client/p2p :p2p/write :address/host])
         port (get-in sys [:client/p2p :p2p/write :address/port])
         wallet (get sys :crypto/wallet)
-        address (cstr/lower-case (get wallet :wallet/address))
+        address (get wallet :wallet/address)
         body {:address address}
         body-str (lib.json/edn-&gt;json-str body)
         path (cstr/join &quot;&quot; [&quot;/@&quot; core &quot;/auth&quot;])
