--- a/com.kubelt.lib.wallet.node.html
+++ b/com.kubelt.lib.wallet.node.html
@@ -100,7 +100,7 @@
 				<td class="codes">
 					<pre class="brush: clojure">(defn- wallet-dir
   [app-name]
-  (let [config-path (lib.path/config app-name)
+  (let [config-path (lib.path/data app-name)
         wallet-path (.join path config-path &quot;wallets&quot;)]
     wallet-path))</pre>
 				</td>
