--- a/com.kubelt.ddt.cmds.jwt.sign.html
+++ b/com.kubelt.ddt.cmds.jwt.sign.html
@@ -35,8 +35,7 @@
   {:copyright &quot;©2022 Kubelt, Inc.&quot; :license &quot;Apache 2.0&quot;}
   (:require
    [com.kubelt.lib.error :as lib.error]
-   [com.kubelt.lib.jwt :as jwt]
-   [com.kubelt.sdk.v1 :as sdk]))</pre>
+   [com.kubelt.lib.jwt :as jwt]))</pre>
 				</td>
 			</tr>
 			<tr>
@@ -51,13 +50,8 @@
    :builder (fn [^Yargs yargs]
               yargs)
    :handler (fn [args]
-              (let [kbt (sdk/init)]
-                (if (lib.error/error? kbt)
-                  (prn (:error kbt))
-                  (let [payload {:foo &quot;bar&quot;}]
-                      (println &quot;TODO Sign payload to get JWT&quot;)
-                      ;;(jwt/sign payload)
-                      (sdk/halt! kbt)))))})</pre>
+              (println &quot;TODO Sign payload to get JWT&quot;)
+              #_(jwt/sign payload))})</pre>
 				</td>
 			</tr>
 			<tr>
