--- a/com.kubelt.ddt.cmds.sdk.core.authenticate.html
+++ b/com.kubelt.ddt.cmds.sdk.core.authenticate.html
@@ -34,6 +34,8 @@
 					<pre class="brush: clojure">(ns com.kubelt.ddt.cmds.sdk.core.authenticate
   {:copyright &quot;©2022 Kubelt, Inc.&quot; :license &quot;Apache 2.0&quot;}
   (:require
+   [&quot;path&quot; :as path])
+  (:require
    [cljs.core.async :as async :refer [&lt;!]]
    [clojure.string :as cstr])
   (:require
@@ -52,22 +54,18 @@
 				</td>
 				<td class="codes">
 					<pre class="brush: clojure">(defonce command
-  {:command &quot;authenticate &lt;core&gt;&quot;
+  {:command &quot;authenticate&quot;
    :desc &quot;Authenticate an account&quot;
    :requiresArg false
    :builder (fn [^Yargs yargs]
-              (let [;; Enforce string type, otherwise yargs parses a
-                    ;; wallet address starting with &quot;0x&quot; as a big
-                    ;; integer.
-                    core-config #js {:describe &quot;a @core name&quot;
-                                     :type &quot;string&quot;}]
-                (.positional yargs &quot;core&quot; core-config)
-                (ddt.options/options yargs))
+              ;; Include the common options.
+              (ddt.options/options yargs)
               yargs)
    :handler (fn [args]
               (let [args-map (js-&gt;clj args :keywordize-keys true)
-                    {:keys [host port tls core]} args-map
-                    app-name (get args-map :\$0)
+                    {:keys [host port tls]} args-map
+                    base-name (.basename path (get args-map :\$0))
+                    app-name (cstr/join &quot;.&quot; [&quot;com&quot; &quot;kubelt&quot; base-name])
                     wallet-name (get args-map :wallet)
                     maddr (str &quot;/ip4/&quot; host &quot;/tcp/&quot; port)
                     scheme (if tls :https :http)]
@@ -81,15 +79,16 @@
                                           :p2p/read maddr
                                           :p2p.read/scheme scheme
                                           :p2p/write maddr
-                                          :p2p.write/scheme scheme})]
-                       (-&gt; (sdk.core/authenticate! kbt core)
+                                          :p2p.write/scheme scheme})
+                           address (:wallet/address wallet)]
+                       (-&gt; (sdk.core/authenticate! kbt address)
                            (.then (fn [result]
-                                    (if (lib.error/error? result)
-                                      (prn (:error kbt))
-                                      ;; TODO encrypt(?) and store returned JWT
-                                      (prn result))))
-                           (.then (fn []
-                                    (sdk/halt! kbt))))))))))})</pre>
+                                    (prn result)))
+                           (.catch (fn [e]
+                                     (println (ex-message e))
+                                     (prn (ex-data e))))
+                           (.finally (fn []
+                                       (sdk/halt! kbt))))))))))})</pre>
 				</td>
 			</tr>
 			<tr>
