--- a/com.kubelt.sdk.v1.core.html
+++ b/com.kubelt.sdk.v1.core.html
@@ -38,8 +38,9 @@
   (:require
    [com.kubelt.lib.error :as lib.error]
    [com.kubelt.lib.http.status :as http.status]
+   [com.kubelt.lib.jwt :as lib.jwt]
    [com.kubelt.lib.p2p :as lib.p2p]
-   [com.kubelt.lib.promise :refer [promise]]
+   [com.kubelt.lib.promise :as lib.promise :refer [promise]]
    [com.kubelt.lib.wallet :as lib.wallet]))</pre>
 				</td>
 			</tr>
@@ -53,7 +54,7 @@
 			</tr>
 			<tr>
 				<td class="docs">
-					<p>Create an account or authorize an existing account. User identity is centered around an wallet accounts and is also the name linked to the user's Kubelt application data (aka the 'me dag').</p><p>The public key from the wallet param must be available as a hex-encoded string along with the account id. These two pieces of information together kick off a zero-knowledge authentication request.</p><p>The decryption function stored in the wallet will be used to decrypt a nonce to complete the proof</p><p>TODO test me</p>
+					<p>Create an account or authorize an existing account. User identity is centered around an wallet accounts and is also the name linked to the user's Kubelt application data (aka the 'me dag').</p><p>The public key from the wallet param must be available as a hex-encoded string along with the account id. These two pieces of information together kick off a zero-knowledge authentication request.</p><p>The decryption function stored in the wallet will be used to decrypt a nonce to complete the proof. Returns a promise that resolves to the updated system map containing the JWT for the given core, or is rejected with some information about the error that occurred.</p><p>TODO test me</p>
 				</td>
 				<td class="codes">
 					<pre class="brush: clojure">(defn authenticate!
@@ -67,7 +68,8 @@
   (-&gt; (lib.p2p/authenticate! sys core)
       (.then (fn [auth-result]
                (if (lib.error/error? auth-result)
-                 auth-result
+                 ;; This triggers .catch handlers on returned promise.
+                 (throw (ex-info &quot;error&quot; auth-result))
                  ;; We successfully retrieved a nonce, now verify it by signing
                  ;; it and sending it back.
                  (get-in auth-result [:http/body :nonce]))))
@@ -82,20 +84,18 @@
                       (fn [signature]
                         (let [result (lib.p2p/verify! sys core nonce signature)]
                           (if (lib.error/error? result)
-                            result
+                            (throw (ex-info &quot;invalid signature&quot; result))
                             ;; If successful we get back a JWT that needs to be stored
                             ;; in the system map. NB: the JWT has an expiry and encodes
                             ;; client IP to restrict renewing JWTs for other clients.
                             ;; TODO check/assert that this is true.
                             (.then result
-                                   (fn [{:keys [http/status http/body]}]
-                                     (if (http.status/success? status)
-                                       (let [jwt body]
-                                         (assoc-in sys [:crypto/session :vault/tokens core] jwt))
-                                       ;; We weren't able to retrieve
-                                       ;; the token, return the system
-                                       ;; map unchanged.
-                                       sys)))))))))))</pre>
+                                   (fn [{:keys [http/status http/body] :as response}]
+                                     (if-not (http.status/success? status)
+                                       (throw (ex-info &quot;http error&quot; response))
+                                       (let [jwt (lib.jwt/decode body)]
+                                         ;; TODO verify jwt
+                                         (assoc-in sys [:crypto/session :vault/tokens core] jwt)))))))))))))</pre>
 				</td>
 			</tr>
 			<tr>
