deploy: a62ff3b37d791671b41640d2cbdc84ba764cf8f5

--- a/com.kubelt.sdk.v1.core.html
+++ b/com.kubelt.sdk.v1.core.html
@@ -123,9 +123,9 @@
 				<td class="codes">
 					<pre class="brush: clojure">(defn logged-in?
   [sys core]
-  (let [sessions (get sys :crypto/session)]
+  (let [session-tokens (get-in sys [:crypto/session :vault/tokens])]
     ;; TODO validate the JWT using the current wallet
-    (contains? sessions core)))</pre>
+    (contains? session-tokens core)))</pre>
 				</td>
 			</tr>
 			<tr>
