--- a/com.kubelt.ddt.cmds.wallet.ls.html
+++ b/com.kubelt.ddt.cmds.wallet.ls.html
@@ -39,6 +39,7 @@
    [clojure.string :as cstr])
   (:require
    [com.kubelt.ddt.color :as ddt.color]
+   [com.kubelt.ddt.options :as ddt.options]
    [com.kubelt.ddt.prompt :as ddt.prompt]
    [com.kubelt.lib.wallet :as lib.wallet]))</pre>
 				</td>
@@ -55,8 +56,8 @@
    :builder (fn [^Yargs yargs]
               yargs)
    :handler (fn [args]
-              (let [args-map (js-&gt;clj args :keywordize-keys true)
-                    app-name (get args-map :\$0)]
+              (let [args-map (ddt.options/to-map args)
+                    app-name (get args-map :app-name)]
                 (doseq [wallet-name (lib.wallet/ls app-name)]
                   (let [arrow (ddt.color/hilite &quot;-&gt;&quot;)
                         wallet-line (cstr/join &quot; &quot; [arrow wallet-name])]
