--- a/com.kubelt.lib.p2p.html
+++ b/com.kubelt.lib.p2p.html
@@ -57,9 +57,9 @@
   [sys core]
   {:pre [(string? core)]}
   (let [client (get sys :client/http)
-        scheme (get-in sys [:client/p2p :p2p/read :http/scheme])
-        host (get-in sys [:client/p2p :p2p/write :address/host])
-        port (get-in sys [:client/p2p :p2p/write :address/port])
+        scheme (get-in sys [:client/p2p :http/scheme])
+        host (get-in sys [:client/p2p :http/host])
+        port (get-in sys [:client/p2p :http/port])
         wallet (get sys :crypto/wallet)
         address (get wallet :wallet/address)
         body {:address address}
@@ -90,9 +90,9 @@
   [sys core nonce signature]
   {:pre [(every? string? [core nonce])]}
   (let [client (get sys :client/http)
-        scheme (get-in sys [:client/p2p :p2p/read :http/scheme])
-        host (get-in sys [:client/p2p :p2p/write :address/host])
-        port (get-in sys [:client/p2p :p2p/write :address/port])
+        scheme (get-in sys [:client/p2p :http/scheme])
+        host (get-in sys [:client/p2p :http/host])
+        port (get-in sys [:client/p2p :http/port])
         body {:nonce nonce :signature signature}
         body-str (lib.json/edn-&gt;json-str body)
         path (cstr/join &quot;&quot; [&quot;/@&quot; core &quot;/auth/verify&quot;])
