--- a/index.html
+++ b/index.html
@@ -343,6 +343,9 @@
 								<a href="com.kubelt.ddt.cmds.sdk.init.html">com.kubelt.ddt.cmds.sdk.init</a>
 							</li>
 							<li>
+								<a href="com.kubelt.ddt.cmds.sdk.options.html">com.kubelt.ddt.cmds.sdk.options</a>
+							</li>
+							<li>
 								<a href="com.kubelt.ddt.cmds.sdk.resource.html">com.kubelt.ddt.cmds.sdk.resource</a>
 							</li>
 							<li>
@@ -563,6 +566,9 @@
 							</li>
 							<li>
 								<a href="uuid.cljc.html">uuid.cljc</a>
+							</li>
+							<li>
+								<a href="com.kubelt.lib.vault.html">com.kubelt.lib.vault</a>
 							</li>
 							<li>
 								<a href="wallet.cljc.html">wallet.cljc</a>
