--- a/client.cljc.html
+++ b/client.cljc.html
@@ -40,6 +40,7 @@
    [malli.error :as me])
   (:require
    [com.kubelt.lib.error :as lib.error]
+   [com.kubelt.lib.promise :as lib.promise]
    [com.kubelt.ipfs.api :as ipfs.api]
    [com.kubelt.ipfs.v0.node :as v0.node]
    [com.kubelt.ipfs.spec :as ipfs.spec]
@@ -152,10 +153,13 @@
 				</td>
 				<td class="codes">
 					<pre class="brush: clojure">(defn- request-&gt;scheme
-  [client request]
+  [request client rw]
+  {:pre [(contains? #{:read :write} rw)]}
   (or
    (get request :uri/scheme)
-   (get client :http/scheme)
+   (let [rw (name rw)
+         kw (keyword rw &quot;scheme&quot;)]
+     (get client kw))
    default-scheme))</pre>
 				</td>
 			</tr>
@@ -165,10 +169,13 @@
 				</td>
 				<td class="codes">
 					<pre class="brush: clojure">(defn- request-&gt;domain
-  [client request]
+  [request client rw]
+  {:pre [(contains? #{:read :write} rw)]}
   (or
    (get request :uri/domain)
-   (get client :http/host)
+   (let [rw (name rw)
+         kw (keyword rw &quot;host&quot;)]
+     (get client kw))
    default-host))</pre>
 				</td>
 			</tr>
@@ -178,11 +185,42 @@
 				</td>
 				<td class="codes">
 					<pre class="brush: clojure">(defn- request-&gt;port
-  [client request]
+  [request client rw]
+  {:pre [(contains? #{:read :write} rw)]}
   (or
    (get request :uri/port)
-   (get client :http/port)
+   ;; We want to get the value of either :read/port or :write/port.
+   ;; The rw parameter is either :read or :write
+   (let [rw (name rw)
+         kw (keyword rw &quot;port&quot;)]
+     (get client kw))
    default-port))</pre>
+				</td>
+			</tr>
+			<tr>
+				<td class="docs">
+					<p>Takes a client map containing configuration options, a request map defining the request to perform, and a keyword indicating whether the request to be performed should be directed at the :read IPFS node or the :write IPFS node. Returns an updated request map with the target URL and request options filled in using values taken from the client configuration.</p>
+				</td>
+				<td class="codes">
+					<pre class="brush: clojure">(defn- request-for
+  [request client read-or-write]
+  {:pre [(contains? #{:read :write} read-or-write)]}
+  (let [;; Get the HTTP request scheme for the request.
+        scheme (request-&gt;scheme request client read-or-write)
+        ;; Get the HTTP host for the request.
+        domain (request-&gt;domain request client read-or-write)
+        ;; Get the HTTP port for the request.
+        port (request-&gt;port request client read-or-write)
+        ;; Should response body be keywordized?
+        keywordize? (get client :client/keywordize?)
+        ;; Should response body be validated?
+        validate? (get client :client/validate?)]
+    (-&gt; request
+        (assoc :uri/scheme scheme)
+        (assoc :uri/domain domain)
+        (assoc :uri/port port)
+        (assoc :response/keywordize? keywordize?)
+        (assoc :response/validate? validate?))))</pre>
 				</td>
 			</tr>
 			<tr>
@@ -274,6 +312,43 @@
 			</tr>
 			<tr>
 				<td class="docs">
+					<p>Return a promise that resolves to a map of details about the remote    node. This node information, e.g. node type (Go, JavaScript) is used    to paper over differences in the various IPFS implementations.</p>
+				</td>
+				<td class="codes">
+					<pre class="brush: clojure">#?(:cljs
+   (defn- info-request
+     [client options read-or-write]
+     (let [request (-&gt; (v0.node/id)
+                       :http/request
+                       (request-for options read-or-write))
+           ;; TODO validate response
+           info-p (proto.http/request! client request)]
+       (-&gt; info-p
+           (.then (fn [info]
+                    (let [;; Extract some information from the response and
+                          ;; store directly in the client. Some of these are
+                          ;; the criteria along which we expect node behaviour
+                          ;; to vary.
+                          node-id (extract-node-id info)
+                          node-key (extract-node-key info)
+                          node-type (extract-node-type info)
+                          node-version (extract-node-version info)
+                          node-addresses (extract-node-addresses info)
+                          node-proto-version (extract-node-proto-version info)
+                          node-protocols (extract-node-protocols info)]
+                      {:ipfs.node/id node-id
+                       :ipfs.node/key node-key
+                       :ipfs.node/type node-type
+                       :ipfs.node/version node-version
+                       :ipfs.node/protocol node-proto-version
+                       :ipfs.node/addresses node-addresses
+                       :ipfs.node/protocols node-protocols})))
+           (.catch (fn [e]
+                     {}))))))</pre>
+				</td>
+			</tr>
+			<tr>
+				<td class="docs">
 					<h2>Public</h2>
 				</td>
 				<td class="codes">
@@ -342,18 +417,22 @@
 			</tr>
 			<tr>
 				<td class="docs">
-					<p>Create and return an IPFS client. Accepts an options map that can be used to control various aspects of the interaction with a remote IPFS daemon or pinning service. Available options include: :client/validate? - check that response conforms to expected schema :client/keywordize? - make response map keys into idiomatic keywords :client/node-info? - fetch and store node information in client :client/timeout - request timeout in milliseconds :http/client - a pre-created HTTP client (must satisfy HttpClient) :http/scheme - the transport scheme to use, e.g. :http, :https :http/host - the IP address of the IPFS host :http/port - the listening port of the IPFS host</p><p>TODO make initial API call to get node info and cache response</p><ul><li>store protocol and agent version (JavaScript, go), etc.</li><li>(v0.node/id)</li><li>(v0.node/version)</li><li>(v0.node/deps)</li><li>(v0.cid/hashes)</li><li>(v0.cid/codecs)</li><li>(v0.cid/bases)Make a sequence of call descriptors and pass to a utility method thatmakes the requests in parallel, then merges the results for storagein the client map.</li></ul><p>Note that this means we probably shouldn't allow the endpoint to be overridden per-call; the user should create a new client if they need to call a different host.</p><p>TODO add timeout option (allow override per call)</p><p>TODO add connections to standard pinning services (optionally).</p><ul><li>pinata</li><li>estuary</li><li>web3.storage</li></ul>
+					<p>Create and return an IPFS client. Accepts an options map that can be used to control various aspects of the interaction with a remote IPFS daemon or pinning service. Available options include: :client/validate? - check that response conforms to expected schema :client/keywordize? - make response map keys into idiomatic keywords :client/node-info? - fetch and store node information in client :client/timeout - request timeout in milliseconds :http/client - a pre-created HTTP client (must satisfy HttpClient) :read/scheme - the HTTP scheme to use for reads, e.g. :http, :https :read/host - the IP address of the IPFS read host :read/port - the listening port of the IPFS read host :write/scheme - the HTTP scheme to use for writes, e.g. :http, :https :write/host - the IP address of the IPFS write host :write/port - the listening port of the IPFS write host</p><p>TODO make initial API call to get node info and cache response</p><ul><li>store protocol and agent version (JavaScript, go), etc.</li><li>(v0.node/id)</li><li>(v0.node/version)</li><li>(v0.node/deps)</li><li>(v0.cid/hashes)</li><li>(v0.cid/codecs)</li><li>(v0.cid/bases)Make a sequence of call descriptors and pass to a utility method thatmakes the requests in parallel, then merges the results for storagein the client map.</li></ul><p>Note that this means we probably shouldn't allow the endpoint to be overridden per-call; the user should create a new client if they need to call a different host.</p><p>TODO add timeout option (allow override per call)</p><p>TODO add connections to standard pinning services (optionally).</p><ul><li>pinata</li><li>estuary</li><li>web3.storage</li></ul>
 				</td>
 				<td class="codes">
 					<pre class="brush: clojure">(defn init
   ([]
    (init {}))
   ([options]
-   (let [default-options {:http/scheme default-scheme
-                          :http/host default-host
-                          :http/port default-port
+   (let [default-options {:read/scheme default-scheme
+                          :read/host default-host
+                          :read/port default-port
+                          :write/scheme default-scheme
+                          :write/host default-host
+                          :write/port default-port
                           :client/validate? true
-                          :client/keywordize? true}
+                          :client/keywordize? true
+                          :client/timeout 5000}
          options (merge default-options options)]
      ;; Validate the options.
      (if-not (malli/validate ipfs.spec/init-options options)
@@ -368,52 +447,23 @@
          (if-not (satisfies? proto.http/HttpClient client)
            {:com.kubelt/type :kubelt.type/error
             :error &quot;invalid HTTP client&quot;}
-           ;; The final shape of the client map.
-           (merge
-            {:com.kubelt/type :kubelt.type/ipfs-client
-             ;;:client/options options
-             :http/client client}
-            ;; Fetch and store node information, e.g. node type (Go,
-            ;; JavaScript) unless told not to. We use this information
-            ;; to paper over differences in the various implementations.
-            (merge options
-                   (if (get options :client/node-info? true)
-                     (let [id-request (-&gt; (v0.node/id) :http/request)
-                           ;; Get the HTTP request scheme for the request.
-                           request-scheme (request-&gt;scheme options id-request)
-                           ;; Get the HTTP host for the request.
-                           request-domain (request-&gt;domain options id-request)
-                           ;; Get the HTTP port for the request.
-                           request-port (request-&gt;port options id-request)
-                           ;; We always keywordize and validate this
-                           ;; response so we're storing data in known
-                           ;; format.
-                           id-request (-&gt; id-request
-                                          (assoc :uri/scheme request-scheme)
-                                          (assoc :uri/domain request-domain)
-                                          (assoc :uri/port request-port)
-                                          (assoc :response/keywordize? true))
-                           ;; TODO validate response
-                           info (proto.http/request! client id-request)
-                           ;; Extract some information from the response and
-                           ;; store directly in the client. Some of these are
-                           ;; the criteria along which we expect node behaviour
-                           ;; to vary.
-                           node-id (extract-node-id info)
-                           node-key (extract-node-key info)
-                           node-type (extract-node-type info)
-                           node-version (extract-node-version info)
-                           node-addresses (extract-node-addresses info)
-                           node-proto-version (extract-node-proto-version info)
-                           node-protocols (extract-node-protocols info)]
-                       {:ipfs.node/id node-id
-                        :ipfs.node/key node-key
-                        :ipfs.node/type node-type
-                        :ipfs.node/version node-version
-                        :ipfs.node/protocol node-proto-version
-                        :ipfs.node/addresses node-addresses
-                        :ipfs.node/protocols node-protocols})
-                     {})))))))))</pre>
+           (let [node-info? (get options :client/node-info? true)
+                 read-p (if-not node-info?
+                          (lib.promise/resolved {})
+                          (info-request client options :read))
+                 write-p (if-not node-info?
+                           (lib.promise/resolved {})
+                           (info-request client options :write))]
+             ;; TODO make simultaneous requests for info to read and
+             ;; write nodes.
+             (-&gt; (lib.promise/all [read-p write-p])
+                 (.then (fn [[read-info write-info]]
+                          ;; Returns the final shape of the client map.
+                          ;;(merge options read-info))
+                          (-&gt; {:com.kubelt/type :kubelt.type/ipfs-client
+                               :http/client client}
+                              (assoc :node/read read-info)
+                              (assoc :node/write write-info))))))))))))</pre>
 				</td>
 			</tr>
 			<tr>
@@ -449,32 +499,23 @@
     (lib.error/explain ipfs.spec/api-resource request-map)
     ;; Perform the request!
     :else
-    (let [;; TODO allow per-request override of keywordizing?
-          keywordize? (get client :client/keywordize? true)
-          ;; TODO perform validation if asked for.
-          ;; TODO allow per-request override of validation?
-          validate? (get client :client/validate? false)
-          ;; This stored map contains the HTTP request parameters we can
-          ;; pass to our HTTP client (once we've added a few missing
-          ;; bits).
-          request (get request-map :http/request)
-          ;; Get the HTTP request scheme for the request.
-          request-scheme (request-&gt;scheme client request)
-          ;; Get the HTTP host for the request.
-          request-domain (request-&gt;domain client request)
-          ;; Get the HTTP port for the request.
-          request-port (request-&gt;port client request)
-          ;; Add the request target details to the request map, along
-          ;; with any additional parameters that control how the result
-          ;; will be performed and/or the response processed.
-          request (-&gt; request
-                      (assoc :uri/scheme request-scheme)
-                      (assoc :uri/domain request-domain)
-                      (assoc :uri/port request-port)
-                      ;; Should response body be keywordized?
-                      (assoc :response/keywordize? keywordize?)
-                      ;; Should response body be validated?
-                      (assoc :response/validate? validate?))
+    ;; TODO allow per-request override of keywordizing?
+    ;; TODO perform validation if asked for.
+    ;; TODO allow per-request override of validation?
+    ;; TODO categorize requests as being reads or writes and
+    ;; directing to the appropriate IPFS node (allowing user
+    ;; override).
+    (let [;; This stored map contains the HTTP request parameters we can
+          ;; pass to our HTTP client once we've added a few missing
+          ;; bits. The HTTP request is defined by the map available at
+          ;; key :http/request, and we fill it in using (request-for).
+          ;;
+          ;; This adds the request target details to the request map,
+          ;; along with any additional parameters that control how the
+          ;; result will be validated and/or the response processed.
+          request (-&gt; request-map
+                      :http/request
+                      (request-for client :read))
           ;; TODO invoke callbacks if provided
           ;; TODO supply promise/channel if requested
           http-client (get client :http/client)
