--- a/com.kubelt.ddt.cmds.sdk.core.authenticate.html
+++ b/com.kubelt.ddt.cmds.sdk.core.authenticate.html
@@ -34,8 +34,6 @@
 					<pre class="brush: clojure">(ns com.kubelt.ddt.cmds.sdk.core.authenticate
   {:copyright &quot;©2022 Proof Zero Inc.&quot; :license &quot;Apache 2.0&quot;}
   (:require
-   [&quot;path&quot; :as path])
-  (:require
    [cljs.core.async :as async :refer [&lt;!]]
    [clojure.string :as cstr])
   (:require
@@ -62,33 +60,30 @@
               (ddt.options/options yargs)
               yargs)
    :handler (fn [args]
-              (let [args-map (js-&gt;clj args :keywordize-keys true)
-                    {:keys [host port tls]} args-map
-                    base-name (.basename path (get args-map :\$0))
-                    app-name (cstr/join &quot;.&quot; [&quot;com&quot; &quot;kubelt&quot; base-name])
-                    wallet-name (get args-map :wallet)
-                    maddr (str &quot;/ip4/&quot; host &quot;/tcp/&quot; port)
-                    scheme (if tls :https :http)]
-                (ddt.prompt/ask-password!
-                 (fn [err result]
-                   (ddt.util/exit-if err)
-                   (async/go
-                     (let [password (.-password result)
-                           wallet (&lt;! (lib.wallet/load app-name wallet-name password))
-                           kbt (sdk/init {:crypto/wallet wallet
-                                          :p2p/read maddr
-                                          :p2p.read/scheme scheme
-                                          :p2p/write maddr
-                                          :p2p.write/scheme scheme})
-                           address (:wallet/address wallet)]
-                       (-&gt; (sdk.core/authenticate! kbt address)
-                           (.then (fn [result]
-                                    (prn result)))
-                           (.catch (fn [e]
-                                     (println (ex-message e))
-                                     (prn (ex-data e))))
-                           (.finally (fn []
-                                       (sdk/halt! kbt))))))))))})</pre>
+              (ddt.prompt/ask-password!
+               (fn [err result]
+                 (ddt.util/exit-if err)
+                 (async/go
+                   (let [args-map (ddt.options/to-map args)
+                         ;; Load the wallet.
+                         app-name (get args-map :app-name)
+                         wallet-name (get args-map :wallet)
+                         password (.-password result)
+                         wallet (&lt;! (lib.wallet/load app-name wallet-name password))
+                         ;; Transform command line arguments into an SDK options map.
+                         options (-&gt; args-map
+                                     ddt.options/init-options
+                                     (assoc :crypto/wallet wallet))
+                         kbt (sdk/init options)
+                         address (:wallet/address wallet)]
+                     (-&gt; (sdk.core/authenticate! kbt address)
+                         (.then (fn [result]
+                                  (prn result)))
+                         (.catch (fn [e]
+                                   (println (ex-message e))
+                                   (prn (ex-data e))))
+                         (.finally (fn []
+                                     (sdk/halt! kbt)))))))))})</pre>
 				</td>
 			</tr>
 			<tr>
