--- a/com.kubelt.ddt.cmds.wallet.rm.html
+++ b/com.kubelt.ddt.cmds.wallet.rm.html
@@ -38,8 +38,9 @@
   (:require
    [clojure.string :as cstr])
   (:require
-   [com.kubelt.ddt.util :as ddt.util]
+   [com.kubelt.ddt.options :as ddt.options]
    [com.kubelt.ddt.prompt :as ddt.prompt]
+   [com.kubelt.ddt.util :as ddt.util]
    [com.kubelt.lib.wallet :as lib.wallet]))</pre>
 				</td>
 			</tr>
@@ -55,8 +56,8 @@
    :builder (fn [^Yargs yargs]
               yargs)
    :handler (fn [args]
-              (let [args-map (js-&gt;clj args :keywordize-keys true)
-                    app-name (get args-map :\$0)
+              (let [args-map (ddt.options/to-map args)
+                    app-name (get args-map :app-name)
                     wallet-name (get args-map :name)]
                 ;; Check that the wallet to remove exists.
                 (when-not (lib.wallet/has-wallet? app-name wallet-name)
