--- a/com.kubelt.lib.vault.html
+++ b/com.kubelt.lib.vault.html
@@ -19,7 +19,7 @@
 				<td class="docs">
 					<div class="docs-header">
 						<a class="anchor" href="#repl" name="repl">
-							<h1 class="project-name">com.kubelt.ddt.cmds.sdk</h1>
+							<h1 class="project-name">com.kubelt.lib.vault</h1>
 							<a class="toc-link" href="index.html">toc</a>
 						</a>
 					</div>
@@ -28,17 +28,19 @@
 			</tr>
 			<tr>
 				<td class="docs">
-					<p>CLI setup for 'sdk' sub-command.</p>
+					<p>Work with a 'vault' that stores session tokens.</p>
 				</td>
 				<td class="codes">
-					<pre class="brush: clojure">(ns com.kubelt.ddt.cmds.sdk
-  {:copyright &quot;©2022 Proof Zero Inc.&quot; :license &quot;Apache 2.0&quot;}
-  (:require
-   [com.kubelt.ddt.cmds.sdk.core :as sdk.core]
-   [com.kubelt.ddt.cmds.sdk.init :as sdk.init]
-   [com.kubelt.ddt.cmds.sdk.options :as sdk.options]
-   [com.kubelt.ddt.cmds.sdk.resource :as sdk.resource]
-   [com.kubelt.ddt.cmds.sdk.workspace :as sdk.workspace]))</pre>
+					<pre class="brush: clojure">(ns com.kubelt.lib.vault
+  {:copyright &quot;©2022 Kubelt, Inc.&quot; :license &quot;Apache 2.0&quot;})</pre>
+				</td>
+			</tr>
+			<tr>
+				<td class="docs">
+					<h2>Public</h2>
+				</td>
+				<td class="codes">
+					<pre class="brush: clojure"></pre>
 				</td>
 			</tr>
 			<tr>
@@ -46,17 +48,32 @@
 					
 				</td>
 				<td class="codes">
-					<pre class="brush: clojure">(defonce command
-  {:command &quot;sdk &lt;command&gt;&quot;
-   :desc &quot;Invoke SDK methods&quot;
-   :builder (fn [^js yargs]
-              (-&gt; yargs
-                  (.command (clj-&gt;js sdk.init/command))
-                  (.command (clj-&gt;js sdk.options/command))
-                  (.command (clj-&gt;js sdk.core/command))
-                  (.command (clj-&gt;js sdk.resource/command))
-                  (.command (clj-&gt;js sdk.workspace/command))
-                  (.demandCommand)))})</pre>
+					<pre class="brush: clojure">(defn vault?
+  [x]
+  (and
+   (map? x)
+   (= :kubelt.type/vault (:com.kubelt/type x))))</pre>
+				</td>
+			</tr>
+			<tr>
+				<td class="docs">
+					<p>Return a map from core name to JWT token strings.</p>
+				</td>
+				<td class="codes">
+					<pre class="brush: clojure">(defn tokens
+  [vault]
+  {:pre [(vault? vault)]}
+  (letfn [(token-for [m [core decoded-jwt]]
+            ;; The original JWT string parts are preserved as :token
+            ;; and :signature when decoding a JWT
+            ;; using (lib.jwt/decode). We just stitch those pieces back
+            ;; together to get the original JWT.
+            (let [token (:token decoded-jwt)
+                  signature (:signature decoded-jwt)
+                  jwt-str (str token &quot;.&quot; signature)]
+              (assoc m core jwt-str)))]
+    (let [token-map (:vault/tokens vault)]
+      (reduce token-for {} token-map))))</pre>
 				</td>
 			</tr>
 			<tr>
