--- a/com.kubelt.sdk.html
+++ b/com.kubelt.sdk.html
@@ -75,6 +75,7 @@
 					<pre class="brush: clojure">(def node-v1
   #js {:init sdk.v1/init-js
        :halt sdk.v1/halt-js!
+       :options sdk.v1/options-js
        ;; core
        :core #js {:authenticate sdk.v1.core/authenticate-js!
                   :isLoggedIn sdk.v1.core/logged-in-js?
