--- a/com.kubelt.spec.config.html
+++ b/com.kubelt.spec.config.html
@@ -48,15 +48,6 @@
 			</tr>
 			<tr>
 				<td class="docs">
-					<p>Supported execution environments.</p>
-				</td>
-				<td class="codes">
-					<pre class="brush: clojure">(def platform
-  [:enum :platform.type/node :platform.type/browser :platform.type/jvm])</pre>
-				</td>
-			</tr>
-			<tr>
-				<td class="docs">
 					<p>Logging levels defined by the timbre logging library.</p>
 				</td>
 				<td class="codes">
@@ -88,6 +79,19 @@
 			</tr>
 			<tr>
 				<td class="docs">
+					
+				</td>
+				<td class="codes">
+					<pre class="brush: clojure">(def credentials
+  [:and
+   {:description &quot;A map from core name to JWT strings.&quot;
+    :example {&quot;0x123abc&quot; &quot;&lt;header&gt;.&lt;payload&gt;.&lt;signature&gt;&quot;}}
+   ;; TODO flesh this out
+   [:map-of :string :string]])</pre>
+				</td>
+			</tr>
+			<tr>
+				<td class="docs">
 					<h2>config</h2>Specifies the the configuration map passed to the sdk/init function.
 				</td>
 				<td class="codes">
@@ -101,13 +105,15 @@
 				<td class="codes">
 					<pre class="brush: clojure">(def config
   [:map {:closed true}
-   [:sys/platform {:optional true} platform]
-   [:logging/min-level {:optional true} logging-level]
+   [:log/level {:optional true} logging-level]
+   [:credential/jwt {:optional true} credentials]
    [:crypto/wallet {:optional true} spec.wallet/wallet]
-   [:p2p/read {:optional true} multiaddr]
-   [:p2p.read/scheme {:optional true} spec.http/scheme]
-   [:p2p/write {:optional true} multiaddr]
-   [:p2p.write/scheme {:optional true} spec.http/scheme]])</pre>
+   [:ipfs/read {:optional true} multiaddr]
+   [:ipfs.read/scheme {:optional true} spec.http/scheme]
+   [:ipfs/write {:optional true} multiaddr]
+   [:ipfs.write/scheme {:optional true} spec.http/scheme]
+   [:p2p/multiaddr {:optional true} multiaddr]
+   [:p2p/scheme {:optional true} spec.http/scheme]])</pre>
 				</td>
 			</tr>
 			<tr>
