deploy: ed7d29acc922b8d02fb0e72b9bb409dfb2022f30

--- a/com.kubelt.lib.error.html
+++ b/com.kubelt.lib.error.html
@@ -85,8 +85,11 @@
 					<pre class="brush: clojure">(defn explain
   [schema value]
   (let [explain (-&gt; schema (mc/explain value) me/humanize)]
-    {:com.kubelt/type :kubelt.type/error
-     :error explain}))</pre>
+    (merge
+     {:com.kubelt/type :kubelt.type/error}
+     (when (:title (mc/properties schema))
+       {:title (:title (mc/properties schema))})
+     {:error explain})))</pre>
 				</td>
 			</tr>
 			<tr>
