--- a/index.html
+++ b/index.html
@@ -463,6 +463,18 @@
 								<a href="com.kubelt.lib.config.html">com.kubelt.lib.config</a>
 							</li>
 							<li>
+								<a href="com.kubelt.lib.config.default.html">com.kubelt.lib.config.default</a>
+							</li>
+							<li>
+								<a href="com.kubelt.lib.config.sdk.html">com.kubelt.lib.config.sdk</a>
+							</li>
+							<li>
+								<a href="com.kubelt.lib.config.system.html">com.kubelt.lib.config.system</a>
+							</li>
+							<li>
+								<a href="com.kubelt.lib.config.util.html">com.kubelt.lib.config.util</a>
+							</li>
+							<li>
 								<a href="crypto.cljc.html">crypto.cljc</a>
 							</li>
 							<li>
@@ -476,9 +488,6 @@
 							</li>
 							<li>
 								<a href="com.kubelt.lib.crypto.seed.html">com.kubelt.lib.crypto.seed</a>
-							</li>
-							<li>
-								<a href="com.kubelt.lib.detect.html">com.kubelt.lib.detect</a>
 							</li>
 							<li>
 								<a href="com.kubelt.lib.error.html">com.kubelt.lib.error</a>
@@ -590,6 +599,9 @@
 							</li>
 							<li>
 								<a href="com.kubelt.sdk.v1.workspace.html">com.kubelt.sdk.v1.workspace</a>
+							</li>
+							<li>
+								<a href="com.kubelt.spec.html">com.kubelt.spec</a>
 							</li>
 							<li>
 								<a href="com.kubelt.spec.bag.html">com.kubelt.spec.bag</a>
