--- a/com.kubelt.lib.config.sdk.html
+++ b/com.kubelt.lib.config.sdk.html
@@ -19,7 +19,7 @@
 				<td class="docs">
 					<div class="docs-header">
 						<a class="anchor" href="#repl" name="repl">
-							<h1 class="project-name">com.kubelt.lib.vault</h1>
+							<h1 class="project-name">com.kubelt.lib.config.sdk</h1>
 							<a class="toc-link" href="index.html">toc</a>
 						</a>
 					</div>
@@ -28,11 +28,13 @@
 			</tr>
 			<tr>
 				<td class="docs">
-					<p>Work with a 'vault' that stores session tokens.</p>
+					<p>Work with options for SDK (re)initialization.</p>
 				</td>
 				<td class="codes">
-					<pre class="brush: clojure">(ns com.kubelt.lib.vault
-  {:copyright &quot;©2022 Kubelt, Inc.&quot; :license &quot;Apache 2.0&quot;})</pre>
+					<pre class="brush: clojure">(ns com.kubelt.lib.config.sdk
+  {:copyright &quot;©2022 Proof Zero Inc.&quot; :license &quot;Apache 2.0&quot;}
+  (:require
+   [com.kubelt.lib.vault :as lib.vault]))</pre>
 				</td>
 			</tr>
 			<tr>
@@ -45,50 +47,30 @@
 			</tr>
 			<tr>
 				<td class="docs">
-					
+					<p>Given a system map, return an options map that can be used to reinitialize the SDK with the same configuration by passing it to (com.kubelt.sdk.v1/init).</p>
 				</td>
 				<td class="codes">
-					<pre class="brush: clojure">(defn vault?
-  [x]
-  (and
-   (map? x)
-   (= :kubelt.type/vault (:com.kubelt/type x))))</pre>
-				</td>
-			</tr>
-			<tr>
-				<td class="docs">
-					<p>Return a token storage vault containing a map from core name to associated JWT.</p>
-				</td>
-				<td class="codes">
-					<pre class="brush: clojure">(defn vault
-  ([]
-   (let [tokens {}]
-     (vault tokens)))
-  ([token-map]
-   {:pre [(map? token-map)]}
-   {:com.kubelt/type :kubelt.type/vault
-    :vault/tokens token-map}))</pre>
-				</td>
-			</tr>
-			<tr>
-				<td class="docs">
-					<p>Return a map from core name to JWT token strings.</p>
-				</td>
-				<td class="codes">
-					<pre class="brush: clojure">(defn tokens
-  [vault]
-  {:pre [(vault? vault)]}
-  (letfn [(token-for [m [core decoded-jwt]]
-            ;; The original JWT string parts are preserved as :token
-            ;; and :signature when decoding a JWT
-            ;; using (lib.jwt/decode). We just stitch those pieces back
-            ;; together to get the original JWT.
-            (let [token (:token decoded-jwt)
-                  signature (:signature decoded-jwt)
-                  jwt-str (str token &quot;.&quot; signature)]
-              (assoc m core jwt-str)))]
-    (let [token-map (:vault/tokens vault)]
-      (reduce token-for {} token-map))))</pre>
+					<pre class="brush: clojure">(defn options
+  [sys-map]
+  (let [ipfs-read-maddr (get sys-map :ipfs.read/multiaddr)
+        ipfs-read-scheme (get sys-map :ipfs.read/scheme)
+        ipfs-write-maddr (get sys-map :ipfs.write/multiaddr)
+        ipfs-write-scheme (get sys-map :ipfs.write/scheme)
+        p2p-multiaddr (get sys-map :p2p/multiaddr)
+        p2p-scheme (get sys-map :p2p/scheme)
+        log-level (get sys-map :log/level)
+        ;; TODO rename :crypto/session to :crypto/vault for clarity
+        credentials (lib.vault/tokens (:crypto/session sys-map))
+        wallet (get sys-map :crypto/wallet)]
+    {:log/level log-level
+     :ipfs.read/multiaddr ipfs-read-maddr
+     :ipfs.read/scheme ipfs-read-scheme
+     :ipfs.write/multiaddr ipfs-write-maddr
+     :ipfs.write/scheme ipfs-write-scheme
+     :p2p/scheme p2p-scheme
+     :p2p/multiaddr p2p-multiaddr
+     :crypto/wallet wallet
+     :credential/jwt credentials}))</pre>
 				</td>
 			</tr>
 			<tr>
