--- a/com.kubelt.lib.config.util.html
+++ b/com.kubelt.lib.config.util.html
@@ -19,7 +19,7 @@
 				<td class="docs">
 					<div class="docs-header">
 						<a class="anchor" href="#repl" name="repl">
-							<h1 class="project-name">com.kubelt.lib.detect</h1>
+							<h1 class="project-name">com.kubelt.lib.config.util</h1>
 							<a class="toc-link" href="index.html">toc</a>
 						</a>
 					</div>
@@ -28,13 +28,35 @@
 			</tr>
 			<tr>
 				<td class="docs">
-					<p>Node and gateway detection.</p>
+					<p>Configuration-related support utilities.</p>
 				</td>
 				<td class="codes">
-					<pre class="brush: clojure">(ns com.kubelt.lib.detect
+					<pre class="brush: clojure">(ns com.kubelt.lib.config.util
   {:copyright &quot;©2022 Proof Zero Inc.&quot; :license &quot;Apache 2.0&quot;}
   (:require
-   [clojure.string :as str]))</pre>
+   [clojure.string :as cstr])
+  (:require
+   [com.kubelt.lib.config.default :as lib.config.default]))</pre>
+				</td>
+			</tr>
+			<tr>
+				<td class="docs">
+					<h2>Internal</h2>
+				</td>
+				<td class="codes">
+					<pre class="brush: clojure"></pre>
+				</td>
+			</tr>
+			<tr>
+				<td class="docs">
+					<p>Convert a log level string (e.g. 'info', ':info') to a keyword.</p>
+				</td>
+				<td class="codes">
+					<pre class="brush: clojure">(defn log-level-&gt;keyword
+  [log-level]
+  (if (string? log-level)
+    (keyword (cstr/replace log-level #&quot;^:&quot; &quot;&quot;))
+    log-level))</pre>
 				</td>
 			</tr>
 			<tr>
@@ -47,38 +69,20 @@
 			</tr>
 			<tr>
 				<td class="docs">
-					<p>Detect if a local node is present.</p>
+					<p>Convert a JavaScript configuration object to a Clojure config map.</p>
 				</td>
 				<td class="codes">
-					<pre class="brush: clojure">(defn local-node?
-  []
-  false)</pre>
-				</td>
-			</tr>
-			<tr>
-				<td class="docs">
-					<p>Given a user-supplied options map (passed to the SDK initialization function), return a configuration map that is updated based on whether or not we detected a local p2p node. If not, use the user-provided settings; if we detect a local node, we override the user settings to force usage of the local node.</p>
-				</td>
-				<td class="codes">
-					<pre class="brush: clojure">(defn node-or-gateway
-  [default options]
-  (let [config (cond-&gt; default
-                 ;; Override p2p read address using options value, if present.
-                 (contains? options :p2p/read)
-                 (assoc-in [:p2p/read :http/address] (get options :p2p/read))
-                 ;; Override TLS setting for p2p reads, if provided.
-                 (contains? options :p2p.read/scheme)
-                 (assoc-in [:p2p/read :http/scheme] (get options :p2p.read/scheme))
-                 ;; Override p2p write address using options value, if present.
-                 (contains? options :p2p/write)
-                 (assoc-in [:p2p/write :http/address] (get options :p2p/write))
-                 ;; Override TLS setting for p2p writes, if provided.
-                 (contains? options :p2p.write/scheme)
-                 (assoc-in [:p2p/write :http/scheme] (get options :p2p.write/scheme)))]
-    ;; TODO Use the user-provided settings by default (at this point we
-    ;; know the options map is valid).
-    ;; If we detect a local p2p node, use it for reads.
-    config))</pre>
+					<pre class="brush: clojure">#?(:node
+   (defn obj-&gt;map
+     [o]
+     {:pre [(object? o)]}
+     (let [config  (js-&gt;clj o :keywordize-keys true)]
+       (if (empty? config)
+         lib.config.default/sdk
+         ;; Fix up any config map values that didn't translate from
+         ;; JavaScript.
+         (-&gt; config
+             (update-in [:log/level] log-level-&gt;keyword))))))</pre>
 				</td>
 			</tr>
 			<tr>
