--- a/com.kubelt.spec.config.html
+++ b/com.kubelt.spec.config.html
@@ -34,6 +34,8 @@
 					<pre class="brush: clojure">(ns com.kubelt.spec.config
   {:copyright &quot;©2022 Proof Zero Inc.&quot; :license &quot;Apache 2.0&quot;}
   (:require
+   [malli.core :as m])
+  (:require
    [com.kubelt.spec.http :as spec.http]
    [com.kubelt.spec.wallet :as spec.wallet]))</pre>
 				</td>
@@ -41,6 +43,14 @@
 			<tr>
 				<td class="docs">
 					<p>We use the default vector-based format for ease of authoring, but if performance issues arise it may be more efficient to switch to the "Schema AST" map-based syntax instead as that should be faster to instantiate for large schemas.</p>
+				</td>
+				<td class="codes">
+					<pre class="brush: clojure"></pre>
+				</td>
+			</tr>
+			<tr>
+				<td class="docs">
+					<p>Note that we can use the (malli.core/properties) function to retrieve metadata associated with a schema, e.g.</p><p>(malli.core/properties   [:and    {:docs "An example map"     :example {}}    :map]) => {:docs "An example map" :example {}}</p>
 				</td>
 				<td class="codes">
 					<pre class="brush: clojure"></pre>
@@ -96,7 +106,7 @@
 			</tr>
 			<tr>
 				<td class="docs">
-					<h2>config</h2>Specifies the the configuration map passed to the sdk/init function.
+					<h2>config</h2>Specifies the configuration map passed to the sdk/init function.
 				</td>
 				<td class="codes">
 					<pre class="brush: clojure"></pre>
@@ -104,11 +114,12 @@
 			</tr>
 			<tr>
 				<td class="docs">
-					
+					<p>A spec for the SDK intialization map where all values are optional. We provide defaults for those options that aren't provided.</p>
 				</td>
 				<td class="codes">
-					<pre class="brush: clojure">(def config
-  [:map {:closed true}
+					<pre class="brush: clojure">(def optional-sdk-config
+  [:map {:closed true
+         :title ::optional-sdk-config}
    [:log/level {:optional true} logging-level]
    [:credential/jwt {:optional true} credentials]
    [:crypto/wallet {:optional true} spec.wallet/wallet]
@@ -122,17 +133,25 @@
 			</tr>
 			<tr>
 				<td class="docs">
-					<p>Schema for SDK configuration map.</p>
+					<p>After default options and user-supplied options are combined, we should have an SDK configuration options map that has every value provided.</p>
 				</td>
 				<td class="codes">
-					<pre class="brush: clojure">(def config-schema
-  [:and
-   ;; Assign properties to the schema that can be retrieved
-   ;; using (m/properties schema).
-   {:title &quot;Configuration&quot;
-    :description &quot;The SDK configuration map&quot;
-    :example {:logging/min-level :info}}
-   config])</pre>
+					<pre class="brush: clojure">(def sdk-config
+  (into [:map {:closed true
+               :title ::sdk-config}]
+        (map #(assoc-in % [1 :optional] false)
+             (m/-children (m/schema optional-sdk-config nil)))))</pre>
+				</td>
+			</tr>
+			<tr>
+				<td class="docs">
+					
+				</td>
+				<td class="codes">
+					<pre class="brush: clojure">(def system-config
+  [:map {;;:closed false
+         :title ::system-config}
+   [:log/level {:optional false} logging-level]])</pre>
 				</td>
 			</tr>
 			<tr>
